--- a/package.json
+++ b/package.json
@@ -11,12 +11,28 @@
   "dependencies": {
     "@tailwindcss/postcss": "^4.0.9",
     "next": "15.2.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "firebase": "^10.8.0",
+    "lucide-react": "^0.344.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.22.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.9.1",
+    "@types/node": "^22.13.9",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
+    "eslint": "^9.9.1",
+    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
+    "eslint-plugin-react-refresh": "^0.4.11",
+    "firebase": "^11.4.0",
+    "globals": "^15.9.0",
     "postcss": "^8.5.3",
-    "tailwindcss": "^4.0.9"
+    "tailwindcss": "^4.0.9",
+    "typescript": "^5.8.2",
+    "typescript-eslint": "^8.3.0",
+    "vite": "^5.4.2"
   }
 }
