--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.0.9",
+    "firebase": "^11.4.0",
+    "lucide-react": "^0.479.0",
     "next": "15.2.0",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
