new design, some fixes, presets added

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "15.2.0",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-dropzone": "^14.3.8"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
