--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
-    "start": "next start",
+    "start": "node server.js",
     "lint": "next lint"
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.0.9",
+    "express": "^5.1.0",
     "firebase": "^11.4.0",
     "lucide-react": "^0.479.0",
     "next": "15.2.0",
