--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@radix-ui/react-label": "^2.1.3",
     "@radix-ui/react-slot": "^1.1.2",
+    "@tabler/icons-react": "^3.31.0",
     "@tailwindcss/postcss": "^4.0.9",
     "@types/axios": "^0.9.36",
     "axios": "^1.8.4",
@@ -20,6 +21,7 @@
     "firebase": "^11.4.0",
     "framer-motion": "^12.6.3",
     "lucide-react": "^0.479.0",
+    "motion": "^12.6.3",
     "next": "15.2.0",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
