--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "format:check": "prettier --check ."
   },
   "lint-staged": {
-  "*.{js,jsx,ts,tsx,json,css,scss,md}": [
-    "prettier --write"
-  ]
-},
+    "*.{js,jsx,ts,tsx,json,css,scss,md}": [
+      "prettier --write"
+    ]
+  },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.7",
     "@radix-ui/react-label": "^2.1.3",
@@ -27,6 +27,7 @@
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "emailjs-com": "^3.2.0",
     "express": "^5.1.0",
     "firebase": "^11.4.0",
     "framer-motion": "^12.6.3",
