--- a/.github/workflows/deploy-homepage.yml
+++ b/.github/workflows/deploy-homepage.yml
@@ -30,5 +30,5 @@ jobs:
           server: s3cura.ai
           username: iqfu27x9dob7
           password: Gaurav123#
-          local-dir: ./out
-          server-dir: /public_html/
+          local-dir: ./out/
+          server-dir: /public_html/ # Adjust if your site is in a subdirector
