--- a/.github/workflows/deploy-homepage.yml
+++ b/.github/workflows/deploy-homepage.yml
@@ -24,11 +24,25 @@ jobs:
       - name: Build Static Site
         run: npm run build
 
-      - name: Deploy via FTP
+      - name: Zip the Build Folder
+        run: |
+          cd out
+          zip -r ../site.zip .
+          cd ..
+
+      - name: Upload ZIP and PHP Script
         uses: SamKirkland/FTP-Deploy-Action@v4.3.4
         with:
           server: s3cura.ai
           username: iqfu27x9dob7
           password: Gaurav123#
-          local-dir: ./out/
-          server-dir: /public_html/ # Adjust if your site is in a subdirector
+          local-dir: ./
+          server-dir: /public_html/
+          exclude: |
+            **/.git*
+            **/node_modules/*
+            **/scripts/*
+            out/**
+
+      - name: Upload unzip.php
+        run: cp scripts/unzip.php ./unzip.php
