--- a/.github/workflows/deploy-homepage.yml
+++ b/.github/workflows/deploy-homepage.yml
@@ -1,62 +1,50 @@
-name: Deploy to GoDaddy via FTP
+name: Deploy to cPanel
 
 on:
   push:
-    branches:
-      - home_page
+    branches: [ main ] # or your production branch
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-
+    
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '18'
-
-      - name: Install Dependencies
-        run: npm install
-
-      - name: Build Static Site
-        run: npm run build
-
-      - name: Zip the Build Folder
-        run: |
-          cd out
-          zip -r ../site.zip ./*
-          cd ..
-
-      - name: Upload ZIP and PHP Script
-        uses: SamKirkland/FTP-Deploy-Action@v4.3.4
-        with:
-          server: s3cura.ai
-          username: iqfu27x9dob7
-          password: Gaurav123#  # Use a GitHub Secret for security!
-          local-dir: ./  # Root directory (to find site.zip and unzip.php)
-          server-dir: /public_html/
-          exclude: |
-            **/*  # Exclude everything by default
-            !site.zip  # Allow site.zip
-            !unzip.php  # Allow unzip.php
-          
-      # - name: Upload ZIP and PHP Script
-      #   uses: SamKirkland/FTP-Deploy-Action@v4.3.4
-      #   with:
-      #     server: s3cura.ai
-      #     username: iqfu27x9dob7
-      #     password: Gaurav123#
-      #     local-dir: ./
-      #     server-dir: /public_html/
-      #     exclude: |
-      #       **/.git*
-      #       **/node_modules/*
-      #       **/scripts/*
-      #       out/**
-
-      - name: Upload unzip.php
-        run: cp scripts/unzip.php ./unzip.php
-
+    - uses: actions/checkout@v3
+    
+    - name: Set up Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '18' # or your preferred version
+    
+    - name: Install dependencies
+      run: npm install # or yarn install
+    
+    - name: Build project
+      run: npm run build # or your build command
+      env:
+        NODE_ENV: production
+    
+    - name: Zip build output
+      run: |
+        cd out # or your build output directory
+        zip -r ../build.zip .
+    
+    - name: Deploy to cPanel
+      uses: appleboy/scp-action@master
+      with:
+        host: s3cura.ai
+        username: iqfu27x9dob7
+        password: Gaurav123#
+        source: "build.zip"
+        target: "public_html/"
+    
+    - name: SSH and extract
+      uses: appleboy/ssh-action@master
+      with:
+        host: s3cura.ai
+        username: iqfu27x9dob7
+        password: Gaurav123#
+        script: |
+          cd public_html
+          unzip -o build.zip
+          rm build.zip
