feat: added steps to upload .out and extract

--- a/.github/workflows/deploy-homepage.yml
+++ b/.github/workflows/deploy-homepage.yml
@@ -38,3 +38,25 @@ jobs:
        port: 22
        script: |
          rm -rf ~/public_html/*
+
+    - name: Upload and extract to public_html
+      uses: appleboy/scp-action@master
+      with:
+          host: 's3cura.ai'
+          username: 'iqfu27x9dob7'
+          password: 'Gaurav123#'
+          port: 22
+          source: "out.zip"
+          target: "~/public_html/"
+        
+    - name: Extract in public_html
+      uses: appleboy/ssh-action@master
+      with:
+          host: 's3cura.ai'
+          username: 'iqfu27x9dob7'
+          password: 'Gaurav123#'
+          port: 22
+          script: |
+            cd ~/public_html
+            unzip -o out.zip
+            rm out.zip
