--- a/.github/workflows/deploy-homepage.yml
+++ b/.github/workflows/deploy-homepage.yml
@@ -39,15 +39,16 @@ jobs:
        script: |
          rm -rf ~/public_html/*
 
-    - name: Upload and extract to public_html
+    - name: Upload ZIP to public_html
       uses: appleboy/scp-action@master
       with:
-          host: 's3cura.ai'
-          username: 'iqfu27x9dob7'
-          password: 'Gaurav123#'
-          port: 22
-          source: "out.zip"
-          target: "~/public_html/"
+       host: 's3cura.ai'
+       username: 'iqfu27x9dob7'
+       password: 'Gaurav123#'
+       port: 22
+       source: "out.zip"
+       target: "/home/iqfu27x9dob7/public_html"  # Absolute path instead of ~
+       overwrite: true  # Allow overwriting existing file
         
     - name: Extract in public_html
       uses: appleboy/ssh-action@master
