--- a/.github/workflows/deploy-homepage.yml
+++ b/.github/workflows/deploy-homepage.yml
@@ -39,25 +39,16 @@ jobs:
        script: |
          rm -rf ~/public_html/*
 
-    - name: Upload ZIP to public_html
-      uses: appleboy/scp-action@master
+    - name: Upload and Extract ZIP
+      uses: appleboy/ssh-action@master
       with:
        host: 's3cura.ai'
        username: 'iqfu27x9dob7'
        password: 'Gaurav123#'
        port: 22
-       source: "out.zip"
-       target: "/home/iqfu27x9dob7/public_html"  # Absolute path instead of ~
-       overwrite: true  # Allow overwriting existing file
-        
-    - name: Extract in public_html
-      uses: appleboy/ssh-action@master
-      with:
-          host: 's3cura.ai'
-          username: 'iqfu27x9dob7'
-          password: 'Gaurav123#'
-          port: 22
-          script: |
-            cd ~/public_html
-            unzip -o out.zip
-            rm out.zip
+       script: |
+        # Upload the file using SCP
+        scp -o StrictHostKeyChecking=no -r out.zip iqfu27x9dob7@s3cura.ai:/home/iqfu27x9dob7/public_html/
+      
+        # Extract and clean up
+        ssh iqfu27x9dob7@s3cura.ai "cd ~/public_html && unzip -o out.zip && rm out.zip"
