--- a/.github/workflows/deploy-homepage.yml
+++ b/.github/workflows/deploy-homepage.yml
@@ -25,10 +25,10 @@ jobs:
     - name: Build project
       run: npm run build
 
-    - name: Zip build output
-      run: |
-        cd out # or your build output directory
-        zip -r ../out.zip .
+    # - name: Zip build output
+    #   run: |
+    #     cd out # or your build output directory
+    #     zip -r ../out.zip .
     
     - name: Create home_page directory
       uses: appleboy/ssh-action@master
@@ -39,15 +39,13 @@ jobs:
         port: 22
         script: |
           mkdir -p /home/iqfu27x9dob7/public_html/home_page
-
-
-    # - name: Upload and Extract ZIP
-    #   uses: appleboy/ssh-action@master
-    #   with:
-    #    host: 's3cura.ai'
-    #    username: 'iqfu27x9dob7'
-    #    password: 'Gaurav123#'
-    #    port: 22
-    #    script: |
-    #     # Upload the file using SCP
-    #     scp -o StrictHostKeyChecking=no -r out.zip iqfu27x9dob7@s3cura.ai:/home/iqfu27x9dob7/public_html/home_page
+    
+    - name: Upload 'out/' folder content to home_page
+      uses: appleboy/scp-action@master
+      with:
+        host: 's3cura.ai'
+        username: 'iqfu27x9dob7'
+        password: 'Gaurav123#'
+        port: 22
+        source: "out/*"
+        target: "/home/iqfu27x9dob7/public_html/home_page"
